--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App template</title>
-    <link rel="stylesheet" href="/public/style.css"
+    <link rel="stylesheet" href="/style.css"
 </head>
 <body>
     <h2>This is a test file!!!!</h2>
@@ -23,7 +23,7 @@
     <li>refresh or log off and back on if your getting frustrated</li>
 </ul>
 
-<script src="/public/main.js"></script>
+<script src="/main.js"></script>
 </body>
 </html>
 
